# winapi-utf8

./: .appveyor.yml  .clang-format  .clang-tidy  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  convert_8cpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f1714771db42b7b5a0cd2ebe6e9736ed.html  files.html  index.html  utf8_8hpp.html  utf8_8hpp_source.html
.github/workflows/: ci.yml
include/winapi/: utf8.hpp
scripts/: pre-commit.sh  setup-hooks.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  files_0.js  functions_0.js  functions_1.js  pages_0.js  pages_1.js  searchdata.js
src/: CMakeLists.txt  convert.cpp
test/: CMakeLists.txt  convert.cpp  main.cpp  string.cpp
